%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: WolfController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: running
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: walking
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: attacking
    m_Type: 4
    m_DefaultVector: {x: 0, y: 0, z: 0}
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: 45c08f169116a0446adc834be69c8e2d, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 1
    m_Mirror: 0
  m_BlendParameter: Blend
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110274483}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: running
    m_EventTreshold: 0
    m_ExitTime: .739130437
  - m_ConditionMode: 1
    m_ConditionEvent: running
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110108936
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200545}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .127659574
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .872340441
  - m_ConditionMode: 2
    m_ConditionEvent: attacking
    m_EventTreshold: 0
    m_ExitTime: .872340441
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110115189
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110242785}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: walking
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110145486
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110242785}
  m_DstState: {fileID: 110274483}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: running
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110160124
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110274483}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .255685657
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: running
    m_EventTreshold: 0
    m_ExitTime: .74000001
  - m_ConditionMode: 2
    m_ConditionEvent: running
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110162390
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110242785}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: walking
    m_EventTreshold: 0
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1101 &110190542
Transition:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110200545}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  - m_ConditionMode: 1
    m_ConditionEvent: attacking
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 85c2c0bde4c615c48b2b3f20d392748b, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: 120, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110200545
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Attack
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400002, guid: 407967cd41e20da48b35c127439aadff, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 336, y: 156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110242785
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: walk
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e9775e4a0d57a444a811535b115d015f, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: 48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110274483
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d78694411a701f44fa98ef151d57fd61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 336, y: 24, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110274483}
  - {fileID: 110242785}
  - {fileID: 110200545}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110200545}
      second:
      - {fileID: 110108936}
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110190542}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110162390}
    data:
      first: {fileID: 110274483}
      second:
      - {fileID: 110160124}
    data:
      first: {fileID: 110242785}
      second:
      - {fileID: 110115189}
      - {fileID: 110145486}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 132, y: -12, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
